// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`../GetValue GetValue ({"className":"className"}) should render 1`] = `
<div
  className="className"
  style={
    Object {
      "border": "2px solid black",
      "margin": 4,
      "minHeight": undefined,
      "padding": 4,
    }
  }
>
  <h5>
    className
  </h5>
  <div
    style={
      Object {
        "border": undefined,
        "margin": 4,
        "minHeight": undefined,
        "padding": 4,
      }
    }
  >
    <button
      className="button"
      onClick={[Function]}
      variant="outlined"
    >
      GET VALUE
    </button>
  </div>
  <div
    style={
      Object {
        "border": "2px solid RosyBrown",
        "margin": 4,
        "minHeight": undefined,
        "padding": 4,
      }
    }
  >
    <pre
      className="value"
    >
      {
  bar: 8
}
    </pre>
  </div>
</div>
`;

exports[`../GetValue GetValue ({"id":"id","className":"className"}) should render 1`] = `
<div
  className="className"
  id="id"
  style={
    Object {
      "border": "2px solid black",
      "margin": 4,
      "minHeight": undefined,
      "padding": 4,
    }
  }
>
  <h5>
    id
  </h5>
  <div
    style={
      Object {
        "border": undefined,
        "margin": 4,
        "minHeight": undefined,
        "padding": 4,
      }
    }
  >
    <button
      className="button"
      onClick={[Function]}
      variant="outlined"
    >
      GET VALUE
    </button>
  </div>
  <div
    style={
      Object {
        "border": "2px solid RosyBrown",
        "margin": 4,
        "minHeight": undefined,
        "padding": 4,
      }
    }
  >
    <pre
      className="value"
    >
      {
  bar: 8
}
    </pre>
  </div>
</div>
`;

exports[`../GetValue GetValue ({"id":"id"}) should render 1`] = `
<div
  id="id"
  style={
    Object {
      "border": "2px solid black",
      "margin": 4,
      "minHeight": undefined,
      "padding": 4,
    }
  }
>
  <h5>
    id
  </h5>
  <div
    style={
      Object {
        "border": undefined,
        "margin": 4,
        "minHeight": undefined,
        "padding": 4,
      }
    }
  >
    <button
      className="button"
      onClick={[Function]}
      variant="outlined"
    >
      GET VALUE
    </button>
  </div>
  <div
    style={
      Object {
        "border": "2px solid RosyBrown",
        "margin": 4,
        "minHeight": undefined,
        "padding": 4,
      }
    }
  >
    <pre
      className="value"
    >
      {
  bar: 8
}
    </pre>
  </div>
</div>
`;

exports[`../GetValue GetValue ({}) should render 1`] = `
<div
  style={
    Object {
      "border": "2px solid black",
      "margin": 4,
      "minHeight": undefined,
      "padding": 4,
    }
  }
>
  <h5 />
  <div
    style={
      Object {
        "border": undefined,
        "margin": 4,
        "minHeight": undefined,
        "padding": 4,
      }
    }
  >
    <button
      className="button"
      onClick={[Function]}
      variant="outlined"
    >
      GET VALUE
    </button>
  </div>
  <div
    style={
      Object {
        "border": "2px solid RosyBrown",
        "margin": 4,
        "minHeight": undefined,
        "padding": 4,
      }
    }
  >
    <pre
      className="value"
    >
      {
  bar: 8
}
    </pre>
  </div>
</div>
`;

exports[`../GetValue should use the right versions of its dependencies 1`] = `
Object {
  "@material-ui/core": "^4.5.0",
  "prop-types": "^15.7.2",
  "react": "^16.10.1",
}
`;
